--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
-    <string name="app_name">Valentines Zipper Lock</string>
+    <string name="app_name">قفل زیپ </string>
     <string name="action_settings">Settings</string>
-    <string name="enable_zipper">Enable Lock Screen</string>
-    <string name="disable_zipper">Disable Default Lock</string>
+    <string name="enable_zipper">فعال کردن قفل</string>
+    <string name="disable_zipper">تنظیمات پیشرفته</string>
     <string name="enable_vibra">Enable Viberation</string>
-    <string name="about_us">About Us</string>
-    <string name="more_apps">Our More Apps</string>
-    <string name="rate_apps">Rate This App </string>
+    <string name="about_us">درباره ما</string>
+    <string name="more_apps">برنامه های دیگر ما</string>
+    <string name="rate_apps">امتیاز به برنامه </string>
+    <string name="image">انتخاب عکس پس زمینه </string>
     <string name="time">11:21 am</string>
     <string name="date">21-sep-15</string>
 
